[package]
name = "orexis"
version = "0.1.11"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
ctor = "0.6.3"
indoc = "2.0.7"
widestring = "1.2.1"
win32_notif = "0.10.5"
# il2cpp-runtime = { git = "https://github.com/hessiser/il2cpp-rust.git", rev = "510aab9" , features = ["log"]}
il2cpp-runtime = { path = "../il2cpp-rust/il2cpp-runtime", features = ["log"] }
patternscan = "1.2.0"
log = "0.4"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
retour = { version = "0.3", features = ["static-detour"] }
lazy_static = "1.4"
parking_lot = "0.12"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

